syntax = "proto3";

option csharp_namespace = "SharedKernel.gRPC";

package jobportal;

service JobPortalGrpc {
  rpc GetJob (JobRequest) returns (JobResponse);
  rpc CreateJob (CreateJobRequest) returns (JobResponse);
}

message JobRequest {
  string job_id = 1;
}

message CreateJobRequest {
  string title = 1;
  string description = 2;
  string company_id = 3;
}

message JobResponse {
  string job_id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string created_at = 5;
}