syntax = "proto3";

option csharp_namespace = "SharedKernel.gRPC";

package localmarket;

service LocalMarketGrpc {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 quantity = 4;
  string seller_id = 5;
}

message ProductResponse {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 quantity = 5;
  string status = 6;
}